# minecraft-clone

./: CMakeLists.txt  LICENSE  README.md
resources/shaders/: chunk.frag  chunk.vert  gui.vert  skybox.frag  skybox.vert
src/: main.cpp  player.cpp  player.hpp  state.hpp
src/block/: block.cpp  block.hpp  block_manager.cpp  block_manager.hpp
src/math/: noise_generator.cpp  noise_generator.hpp
src/render/: camera.cpp  camera.hpp  gl.hpp  renderer.cpp  renderer.hpp  shader_program.cpp  shader_program.hpp  skybox_renderer.cpp  skybox_renderer.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp
src/util/: aabb.hpp  files.hpp  settings.hpp  util.hpp
src/world/: chunk.cpp  chunk.hpp  chunk_mesh.cpp  chunk_mesh.hpp  world.cpp  world.hpp
src/world/generation/: flat_terrain_generator.cpp  flat_terrain_generator.hpp  overworld_terrain_generator.cpp  overworld_terrain_generator.hpp  terrain_generator.hpp
src/world/storage/: chunk_storage.cpp  chunk_storage.hpp
